-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 8.0.0-beta2, Qt Creator 11.0.0-beta2
-
None
-
-
9e7d874bc (master)
Current es.exe cmd. options look like:
-n 10000 %{Query:Escaped}
I want to change them like:
-n 10000 -sort-date-modified %{Query:Escaped}
But the sort order is not maintained in the QtCreator's result.
Currently is hard to find the result if there are more results, if the sort by date modified is applied, finding the result is superb because it will be in most cases at the beginning (of course this is not always true if you are searching files that you don't modify).
Also, the sort order doesn't matter for the locate, if you open man locate you will see that it doesn't support sorting, so this is not relevant for Linux.
| For Gerrit Dashboard: QTCREATORBUG-27789 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 488326,2 | File system index locator: Make sorting results optional | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |