File system index locator: Make sorting results optional

Some tools have sorting options of their own, and this gives users the
chance to keep that order.

Fixes: QTCREATORBUG-27789
Change-Id: I1577de9ee36b5c51e1e588f371f6bbc78a3ec22a
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>